--- a/src/assets/styles/fonts.css
+++ b/src/assets/styles/fonts.css
@@ -2,7 +2,7 @@
 
 h7{
   color: #000000ae;
-  background: linear-gradient(90deg, rgba(0, 0, 0, 0.871), #1866ed);
+  background: linear-gradient(90deg, rgba(0, 0, 0, 0.871), rgb(255, 231, 76));
   background-color: rgba(0, 0, 0, 0.122);
   background: linear-gradient(180deg, rgba(250, 250, 250, 0.235)) 2%, rgba(255, 244, 244, 0.827) 50%,rgba(250, 250, 250, 0.235);
 }
