Update AccountSettings.js - RWD

--- a/src/assets/styles/fonts.css
+++ b/src/assets/styles/fonts.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Audiowide&family=Bree+Serif&family=Electrolize&family=Fugaz+One&family=Gloock&family=Hammersmith+One&family=Lato:ital,wght@0,300;0,400;0,700;1,300;1,700&family=Monoton&family=Montserrat:ital,wght@0,100;0,200;0,400;1,300&family=Mynerve&family=Oleo+Script&family=Roboto:ital,wght@0,100;0,300;0,400;1,300&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Audiowide&family=Bree+Serif&family=Electrolize&family=Fugaz+One&family=Gloock&family=Hammersmith+One&family=Lato:ital,wght@0,300;0,400;0,700;1,300;1,700&family=Monoton&family=Montserrat:ital,wght@0,100;0,200;0,400;1,300&family=Mynerve&family=Oleo+Script&family=Pacifico&family=Roboto:ital,wght@0,100;0,300;0,400;1,300&display=swap');
 h7{
   color: #f8f8f8b7;
   background: linear-gradient(90deg, rgba(156, 202, 27, 0.871), rgb(255, 255, 255));
